--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
           <h5>Articles</h5>
         </a>
         <a href="#">
-          <h5>Subscribe</h5>
+          <h5>Subscribes</h5>
         </a>
       </div>
     </footer>
